// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the block prop can set the button display block 1`] = `
<button class="btn btnDefault square">
  <div class="content">
    <div>
    </div>
  </div>
</button>
<button class="btn btnDefault square block">
  <div class="content">
    <div>
    </div>
  </div>
</button>
`;

exports[`the disabled prop can set the button disable state 1`] = `
<button class="btn btnDefault square">
  <div class="content">
    <div>
    </div>
  </div>
</button>
<button class="btn btnDefault square"
        disabled
>
  <div class="content">
    <div>
    </div>
  </div>
</button>
`;

exports[`the loading props can set the button loading state 1`] = `
<button class="btn btnDefault square">
  <div class="content">
    <div class="loading">
      <div data-test="loading-size"
           style="width: 20px; height: 20px;"
      >
        <div class="circle">
          <svg viewbox="0 0 30 30">
            <circle cx="15"
                    cy="15"
                    r="12"
                    data-test="loading-circle"
                    stroke="#4f8efa"
            >
            </circle>
          </svg>
        </div>
      </div>
      <div style="color: rgb(79, 142, 250);">
      </div>
    </div>
    <div>
    </div>
  </div>
</button>
`;

exports[`the shape prop can set the button shape 1`] = `
<button class="btn btnDefault square">
  <div class="content">
    <div>
    </div>
  </div>
</button>
<button class="btn btnDefault round">
  <div class="content">
    <div>
    </div>
  </div>
</button>
`;

exports[`the type prop can set the button style types 1`] = `
<button class="btn btnDefault square">
  <div class="content">
    <div>
    </div>
  </div>
</button>
<button class="btn btnPrimary square">
  <div class="content">
    <div>
    </div>
  </div>
</button>
<button class="btn btnDanger square">
  <div class="content">
    <div>
    </div>
  </div>
</button>
<button class="btn btnGhost square">
  <div class="content">
    <div>
    </div>
  </div>
</button>
`;
